--- a/estilo.css
+++ b/estilo.css
@@ -155,4 +155,15 @@ h1 {
         letter-spacing: 2px;
         margin-bottom: 30px;
     }
+    
+    .img-my {
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+    }
+    .img-myn {
+        padding-bottom: 40px;
+    }
 }
