--- a/estilo.css
+++ b/estilo.css
@@ -1,206 +1,204 @@
-@import url('https://fonts.googleapis.com/css?family=Helvetica');
+@import url("https://fonts.googleapis.com/css?family=Helvetica");
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-body, html, .capa {
-    height: 100%;
+body,
+html,
+.capa {
+  height: 100%;
 }
 
 body {
-    background: url('img/bg1.1.jpg') no-repeat;
-    background-attachment: fixed;
-    font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
-    overflow: auto;
+  background: url("img/bg1.1.jpg") no-repeat;
+  background-attachment: fixed;
+  font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
+  overflow: auto;
 }
 
 /* ==== Barra de navegação===== */
 
 .navbar-transparente {
-    padding: 15px 0px;
-    background: rgba(34, 33, 33, 0.6);
-    border: none;
+  padding: 15px 0px;
+  background: rgba(34, 33, 33, 0.6);
+  border: none;
 }
 
 .texto {
-    color: white;
+  color: white;
 }
 
 .texto:hover {
-    color: #E98042;
+  color: #e98042;
 }
 
 .titulo {
-    font-size: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 .titulo:hover {
-    color: white;
+  color: white;
 }
 
-.nav>li>a {
-    position: relative;
-    display: block;
-    padding: 10px 15px
+.nav > li > a {
+  position: relative;
+  display: block;
+  padding: 10px 15px;
 }
 
 .marcos {
-    color: #E98042;
-    letter-spacing: 1px;
+  color: #e98042;
+  letter-spacing: 1px;
 }
 
 /* ==== capa ==== */
 
 .capa {
-    display: table;
-    width: 100%;
+  display: table;
+  width: 100%;
 }
 
 .texto-capa {
-    text-align: center;
-    color: white;
-    display: table-cell;
-    vertical-align: middle;
+  text-align: center;
+  color: white;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 /* ==== botao ==== */
 .btn-custom {
-    color: white;
-    border-radius: 500px;
-    -webkit-border-radius: 500px;
-    -moz-border-radius: 500px;
-    padding: 10px 35px;
-    transition: background 0.4s;
+  color: white;
+  border-radius: 500px;
+  -webkit-border-radius: 500px;
+  -moz-border-radius: 500px;
+  padding: 10px 35px;
+  transition: background 0.4s;
 }
 
 .btn-branco {
-    border: 2px solid white;
+  border: 2px solid white;
 }
 .btn-branco:hover {
-    background-color: #E98042;
-    color: white;
+  background-color: #e98042;
+  color: white;
 }
 
 /* ===== secao conteudo ===== */
 #conteudo {
-    background: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  background: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #conteudo h4 {
-    line-height: -10px;
-    font-size: 21px;
-    font-weight: 100px;
-    padding-bottom: 15px;
+  line-height: -10px;
+  font-size: 21px;
+  font-weight: 500;
+  padding-bottom: 15px;
 }
 
 .heading {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    text-transform: uppercase;
-    text-align: center;
-    padding-bottom: 40px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 40px;
 }
 
 .img-my {
-    width: 100%;
+  width: 90%;
 }
 
 /* ======= Contato ======= */
 
 #contato {
-    background: #93959c;
-    padding-top: 20px;
-    padding-bottom: 20px;
+  background: #93959c;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 /* ======= Footer =======*/
 
 .rodape {
-    margin: 10px 5px;
-    text-align: center;
+  margin: 10px 5px;
+  text-align: center;
 }
 
 /* ========= Tipografia ========= */
 
 h1 {
-    font-size: 100px;
-    font-weight: 900;
-    letter-spacing: 2px;
-    margin-bottom: 30px;
+  font-size: 100px;
+  font-weight: 900;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
 }
 
 /* testes */
 .teste {
-    display: inline-block;
-    float: left;
+  display: inline-block;
+  float: left;
 }
 
 .teste a {
-    text-decoration: none; color: #212529 
+  text-decoration: none;
+  color: #212529;
 }
 
 .teste a:hover {
-    color: #E98042;
+  color: #e98042;
 }
 
 .teste-teste {
-    margin-top: 80px;
+  margin-top: 80px;
 }
 
 @media (max-width: 768px) {
-    h1 {
-        font-size: 55px;
-        font-weight: 900;
-        letter-spacing: 2px;
-        margin-bottom: 30px;
-    }
-    
-    .img-my {
-        width: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-    }
-    .img-myn {
-        padding-bottom: 40px;
-    }
+  h1 {
+    font-size: 55px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+  }
 
-    .marcos {
-        margin: 0 0 0 15px;
-    }
+  .img-my {
+    display: none;
+  }
+  .img-myn {
+    padding-bottom: 40px;
+  }
+
+  .marcos {
+    margin: 0 0 0 15px;
+  }
 }
 
-
 .pad {
-    margin: 0 10px 0 15px;
+  margin: 0 10px 0 15px;
 }
 
 .container-fluid {
-    max-width: 1920px;
+  max-width: 1920px;
 }
 
 .space {
-    margin: 0px;
+  margin: 0px;
 }
 
 .space a {
-    color: #212529;
-    text-decoration: none;
+  color: #212529;
+  text-decoration: none;
 }
 
 .space a:hover {
-    color: #E98042;
+  color: #e98042;
 }
 
 .legenda {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 0 auto;
 }
